@@ -1,0 +1,29 @@
+package UFL::Phonebook::View::vCard;
+
+use strict;
+use base 'Catalyst::View::TT';
+
+=head1 NAME
+
+UFL::Phonebook::View::vCard - Catalyst TT View
+
+=head1 SYNOPSIS
+
+See L<UFL::Phonebook>
+
+=head1 DESCRIPTION
+
+Catalyst TT View.
+
+=head1 AUTHOR
+
+A clever guy
+
+=head1 LICENSE
+
+This library is free software, you can redistribute it and/or modify
+it under the same terms as Perl itself.
+
+=cut
+
+1;
