@@ -1,0 +1,5 @@
+use strict;
+use warnings;
+use Test::More tests => 1;
+
+use_ok('UFL::Phonebook::View::HTML');
