@@ -2,4 +2,5 @@ use strict;
 use warnings;
 use Test::More tests => 1;
 
-use_ok('UFL::Phonebook::View::TT');
+BEGIN { use_ok 'UFL::Phonebook::View::vCard' }
+
